--- a/templates/index.html
+++ b/templates/index.html
@@ -168,7 +168,7 @@
     <nav>
         <div class="menu">
             <input type="checkbox" id="respMenuCheck" />
-            <div class="logo"><a href="#">
+            <div class="logo"><a href="/">
                     <h2 class="h2"><img src="{{url_for('static', filename='assets/img/favicon/logo.png')}}"
                             style="width: 132px; height: 88px;">
                     </h2>
@@ -178,6 +178,7 @@
 
                 <li><a href="/find">Find</a></li>
                 <li><a href="/contact">Contact</a></li>
+                <li><a href="/events">Events</a></li>
                 <li><a href="/auth">Sign in/ Sign up</a></li>
             </ul>
             <label class="button bars" for="respMenuCheck"><i class="fas fa-bars"></i></label>
@@ -197,7 +198,7 @@
                         <img class="d-block w-100"
                             src="{{url_for('static', filename='assets/img/carousel/image-1.jpeg')}}" alt="First slide">
                         <div class="carousel-caption d-none d-md-block text-dark">
-                            <h3 class="h5">We do what is most important</h3>
+                            <h3 class="h5">We do what is the most important for oyur startup</h3>
                                 <p>Your startup needs a great management we are your partners in just that.
                                 </p>
                         </div>
