--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -11,10 +11,12 @@ body {
     background-color: #eeeeee;
     display: flex;
     justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 
 .contact-container {
-    margin: 10% 0;
+    margin: 10% 0% 10% 22.5%;
     display: flex;
     flex-direction: row;
     height: 392px;
@@ -140,5 +142,142 @@ textarea {
     .contact-right,
     .contact-left {
         width: 100%;
+    }
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Libre Baskerville", sans-serif;
+}
+
+body {
+    background: #ecf0f3;
+}
+
+nav {
+    width: 100%;
+    padding: 12px 0;
+    background: #ecf0f3;
+    box-shadow: -3px -3px 7px #fff, 3px 3px 5px #ceced1;
+}
+
+nav .menu {
+    max-width: 1270px;
+    margin: auto;
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.menu .logo a {
+    font-size: 28px;
+    font-weight: 600;
+    text-decoration: none;
+    color: #31344b;
+}
+
+.menu ul {
+    list-style: none;
+    display: flex;
+}
+
+.menu ul a {
+    margin: 0 8px;
+    border-radius: 10px;
+    text-decoration: none;
+    font-size: 16px;
+    color: #31344b;
+    border: #3b3e5320 1px solid;
+    font-weight: 550;
+    display: inline-flex;
+    padding: 10px 12px;
+    box-shadow: -3px -3px 7px #fff, 3px 3px 5px #ceced1;
+    position: relative;
+    transition: all 0.32s ease;
+}
+
+.menu ul a:hover:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 10px;
+    box-shadow: inset -3px -3px 7px #fff, inset 3px 3px 5px #ceced1;
+    transition: all 0.32s ease;
+}
+
+.menu ul a:hover {
+    color: #3498db;
+    font-weight: 550;
+    transition: all 0.35s ease;
+}
+
+nav label.button {
+    color: #31344b;
+    font-size: 18px;
+    cursor: pointer;
+    display: none;
+}
+
+nav label.cancel {
+    position: absolute;
+    top: 25px;
+    right: 30px;
+}
+
+#respMenuCheck {
+    display: none;
+}
+
+@media (max-width: 940px) {
+    .menu ul {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        max-width: 400px;
+        padding-top: 45px;
+        height: 100%;
+        background: #ecf0f3;
+        box-shadow: 0 5px 10px #b0b0b5;
+        z-index: 12;
+        transition: all 0.3s ease;
+    }
+
+    .menu ul a {
+        display: block;
+        font-size: 23px;
+        width: 100%;
+        margin-top: 30px;
+        box-shadow: none;
+        text-align: center;
+    }
+
+    .menu ul a:hover {
+        box-shadow: none;
+    }
+
+    nav label.bars {
+        display: block;
+    }
+
+    #respMenuCheck:checked~label.bars {
+        display: none;
+    }
+
+    #respMenuCheck:checked~ul label.cancel {
+        display: block;
+    }
+
+    #respMenuCheck:checked~ul {
+        left: 0;
     }
 }
