Fixed last commit

--- a/templates/find.html
+++ b/templates/find.html
@@ -203,10 +203,13 @@
                         <div class="card-body pt-2">
                             <h3 class="h5 mb-0">{{ item.name }}</h3>
                             <!-- Display expertise -->
+                            <span class="badge badge-md badge-dark text-uppercase">Founder/Co-founder/CTO of X startup</span><br>
+                            
                             <span class="badge badge-md badge-dark text-uppercase">{{ item['expertise 1'] }}</span><br>
                             <span class="badge badge-md badge-success text-uppercase">{{ item['expertise 2']
                                 }}</span><br>
                             <span class="badge badge-md badge-info text-uppercase">{{ item['expertise 3 '] }}</span><br>
+
                             <a class="btn btn-sm btn-primary my-4" href="#">
                                 <span class="fas fa-user-plus mr-1"></span> Follow
                             </a>
