--- a/templates/index.html
+++ b/templates/index.html
@@ -198,8 +198,8 @@
                         <img class="d-block w-100"
                             src="{{url_for('static', filename='assets/img/carousel/image-1.jpeg')}}" alt="First slide">
                         <div class="carousel-caption d-none d-md-block text-dark">
-                            <h3 class="h5">We do what is the most important for oyur startup</h3>
-                                <p>Your startup needs a great management we are your partners in just that.
+                            <h3 class="h5" style="color: #FAEBCD;">We do what is the most important for your startup</h3>
+                                <p style="color: #FAEBCD;">Your startup needs a great management we are your partners in just that.
                                 </p>
                         </div>
                     </div>
@@ -207,8 +207,8 @@
                         <img class="d-block w-100"
                             src="{{url_for('static', filename='assets/img/carousel/image-2.jpeg')}}" alt="Second slide">
                         <div class="carousel-caption d-none d-md-block text-dark">
-                            <h3 class="h5">So choose wisely!</h3>
-                            <p>
+                            <h3 class="h5" style="color: #FAEBCD;">So choose wisely!</h3>
+                            <p style="color: #FAEBCD;">
                                 Your C-suite and Co founders are going to make your break your company
                             </p>
                         </div>
@@ -217,8 +217,8 @@
                         <img class="d-block w-100"
                             src="{{url_for('static', filename='assets/img/carousel/image-3.jpeg')}}" alt="Third slide">
                         <div class="carousel-caption d-none d-md-block text-dark">
-                            <h3 class="h5">We revolutionize startups</h3>
-                            <p>Including yours! Sign up today!
+                            <h3 class="h5" style="color: #FAEBCD;">We revolutionize startups</h3>
+                            <p style="color: #FAEBCD;">Including yours! Sign up today!
                             </p>
                         </div>
                     </div>
